--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".DashBoard">
 
-</android.support.constraint.ConstraintLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/dashboard_toolbar"
+        android:layout_width="@dimen/sw360dp_370dp"
+        android:layout_height="@dimen/sw360dp_56dp"
+        android:scaleY="1.3"
+        android:background="@drawable/sd_appbar_xhdpi"
+        >
+    </android.support.v7.widget.Toolbar>
+   <FrameLayout
+       android:layout_width="match_parent"
+       android:layout_height="@dimen/sw360dp_146dp">
+       <View
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:background="@drawable/sd_dashboard_topimage_xhpdi"/>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="@string/find_jobs_and_freelancing_opportunities"
+           android:textSize="@dimen/sw360dp_22sp"
+           android:gravity="center"
+           android:layout_gravity="center"
+           android:textColor="@color/white"/>
+   </FrameLayout>
+
+</LinearLayout>
+
+
+
+</layout>
